test_case/rust-lang_rust/53324_413073347.rs
plain
[00:45:55] .............................................................................................i......
[00:45:58] .i..................................................................................................
[00:46:01] .......ii.iii.......................................................................................
[00:46:04] ....................................................................................................
[00:46:06] ..........................................................F.........................................
[00:46:11] ....................................................................................................
[00:46:11] ....................................................................................................
[00:46:13] .................................F........................................................i.........
[00:46:19] ....................................................................................................
[00:46:22] ....................................................................................................
[00:46:25] ................................i...................................................................
[00:46:27] ....................................................................................................
---
[00:47:01] ..................................................................i.................................
[00:47:05] ....................................................................................................
[00:47:08] ....................................................................................................
[00:47:10] ....................................................................................................
[00:47:13] ................................F...........................F....................................i..
[00:47:20] ....................................................................................................
[00:47:23] ....................................................................................................
[00:47:26] .......................i............................................................................
[00:47:30] ....................................................................................................
---
[00:47:36] diff of stderr:
[00:47:36] 
[00:47:36] 2   --> $DIR/E0411.rs:12:6
[00:47:36] 3    |
[00:47:36] 4 LL |     <Self>::foo; //~ ERROR E0411
[00:47:36] -    |      ^^^^ `Self` is only available in traits and impls
[00:47:36] +    |      ^^^^ `Self` is only available in impls and traits
[00:47:36] 7 error: aborting due to previous error
[00:47:36] 8 
[00:47:36] 
[00:47:36] 
[00:47:36] 
[00:47:36] The actual stderr differed from the expected stderr.
[00:47:36] Actual stderr saved to /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/error-codes/E0411/E0411.stderr
[00:47:36] To update references, rerun the tests and pass the `--bless` flag
[00:47:36] To only update this specific test, also pass `--test-args error-codes/E0411.rs`
[00:47:36] error: 1 errors occurred comparing output.
[00:47:36] status: exit code: 1
[00:47:36] status: exit code: 1
[00:47:36] command: "/checkout/obj/build/x86_64-unknown-linux-gnu/stage2/bin/rustc" "/checkout/src/test/ui/error-codes/E0411.rs" "--target=x86_64-unknown-linux-gnu" "--error-format" "json" "-Zui-testing" "-C" "prefer-dynamic" "-o" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/error-codes/E0411/a" "-Crpath" "-O" "-Zunstable-options" "-Lnatintrait Foo {\n    type Bar;\n}\n\ntrait Foo2 {\n    type Bar;\n}\n\ntrait Baz : Foo + Foo2 {\n    fn bar() -> <Self as Foo>::Bar; // ok!\n}\n